Fix vertical alignment by manually spacing html; may need to fix later.

--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -18,12 +18,12 @@
 /* Homepage */
 
 html {
-  height: 100%;
+  height: calc(100% - 40px);
   width: 100%;
 }
 
 body {
-  height: 100%;
+  height: calc(100% - 40px);
   width: 100%;
   font-family: 'Open Sans',Helvetica,Arial,sans-serif;
   color: #607D8B;
@@ -40,7 +40,6 @@ body {
   width: 100%;
   height: 100%;
   background-color: transparent;
-
   text-align: center;
   vertical-align: middle;
   -webkit-background-size: cover;
@@ -73,6 +72,17 @@ body {
   font-family: 'Open Sans',Helvetica,Arial,sans-serif;
   font-weight: 200;
   font-size: 30px;
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.btn {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 /*
 .register-button {
